--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,6 @@
 /* General Styles */
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
     line-height: 1.6;
     background-color: tan;
 }
@@ -12,19 +10,13 @@ header {
     background: dimgray;
     color: beige;
     padding: 20px;
-    text-align: center;
     display: flex;
     justify-content: space-between;
-}
-
-header p {
-    font-size: 26px;
+    font-weight: bold;
 }
 
 header nav ul {
-    padding: 0;
     display: flex;
-    justify-content: center;
     list-style: none;
 }
 
@@ -35,7 +27,6 @@ header nav ul li {
 header nav ul li a {
     color: beige;
     text-decoration: none;
-    font-weight: bold;
 }
 
 header nav ul li a:hover {
@@ -44,11 +35,11 @@ header nav ul li a:hover {
 
 /* Section Styles */
 section {
-    padding: 2rem;
-    margin: 1rem auto;
+    padding: 25px;
+    margin: 16px auto;
     max-width: 900px;
     background: beige;
-    border-radius: 2%;
+    border-radius: 15px;
 }
 
 section h1, section h2 {
@@ -59,16 +50,15 @@ section h1, section h2 {
 /* About Section */
 #about img {
     display: block;
-    margin: 1rem auto;
+    margin: 10px auto;
     max-width: 150px;
-    border-radius: 50%;
+    border-radius: 20px;
 }
 
 /* Projects Section */
 .project {
-    margin-bottom: 1.5rem;
-    text-align: center;
     font-weight: bold;
+    text-align: center;
 }
 
 .project-container {
@@ -80,20 +70,19 @@ section h1, section h2 {
     max-width: 100%;
     height: auto;
     border-radius: 10px;
-    margin-bottom: 0.5rem;
 }
 
 /* Contact Section */
 form {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 16px;
 }
 
 form input, form textarea, form button {
-    padding: 0.8rem;
-    font-size: 1rem;
-    border: 1px solid #ddd;
+    padding: 15px;
+    font-size: 16px;
+    border: 1px solid dimgray;
     border-radius: 5px;
 }
 
@@ -110,18 +99,18 @@ form button:hover {
 /* Footer Styles */
 footer {
     text-align: center;
-    padding: 1rem 0;
+    padding: 16px 0;
     background: #333;
     color: beige;
-    margin-top: 2rem;
+    margin-top: 32px;
 }
 
 footer ul {
     padding: 0;
     display: flex;
     justify-content: center;
-    gap: 1rem;
-    
+    gap: 16px;
+    list-style: none;
 }
 
 footer ul li a {
@@ -131,10 +120,4 @@ footer ul li a {
 
 footer ul li a:hover {
     text-decoration: underline;
-}
-
-@media (max-width: 600px) {
-    .project-container {
-        flex-direction: column;
-    }
 }
